kubernetes/gitea/overlays/okd/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
    app.kubernetes.io/instance: gitea
spec:
  host: "git.arthurvardevanyan.com"
  to:
    kind: Service
    name: gitea-http
    weight: 100
  port:
    targetPort: http
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
